--- a/helloworld/blog/templates/blog/post_detail.html
+++ b/helloworld/blog/templates/blog/post_detail.html
@@ -27,7 +27,7 @@
 {% endfor %}
 <form action="{% url 'blog:comment' %}" method="post">
     {% csrf_token %}
-    <input type="hidden" name="post" value="{{post.slug}}">
+    <input type="hidden" name="post" value="{{post.id}}">
     <input type="text" name="writer" placeholder="작성자" value="{{writer}}" />
     <textarea name="content" placeholder="내용"></textarea>
     <input type="submit" value="댓글작성"/>
